# browser-harness

./: .gitignore  AGENTS.md  README.md  autoresearch.jsonl  autoresearch.md  autoresearch.sh  package.json  tsconfig.json
.github/workflows/: ci.yml  release.yml
.opencode/agents/: harness-luna-test-runner.md  harness-research-orchestrator.md
.opencode/commands/: harness-research.md
benchmarks/mind2web/: .gitignore  PROGRESS.md  README.md  core.ts  metrics.ts  package.json  pyproject.toml
benchmarks/mind2web/adapters/: blop.blop.ts
benchmarks/mind2web/src/mind2web_bench/: __init__.py  cli.py  download.py  prepare.py  websites.py
docker/camoufox/: Dockerfile  options.mjs
experiments/: worklog.md
skills/browser-harness/: SKILL.md
src/: cli.ts  create-tools.ts  index.ts  screencast.ts  types.ts
src/cli/: ipc.ts  runtime.ts
src/session/: bun-ws-compat.ts  camoufox-container.ts  playwright-container.ts
src/tools/: action-outcome.ts  assertions.ts  batch.ts  expect.ts  extract.ts  form-validation.ts  forms.ts  keyboard.ts  lifecycle.ts  locators.ts  logs.ts  mouse.ts  navigation.ts  page.ts  references.ts  tabs.ts  types.ts
test/benchmarks/: mind2web.test.ts
test/browser/: README.md  assertion-tools.test.ts  extract-batch-tools.test.ts  form-tools.test.ts  keyboard-tools.test.ts  locator-guard.test.ts  mouse-tools.test.ts  navigation-wait-tools.test.ts  real-browser-tools.test.ts  screencast.test.ts  structured-target-tools.test.ts  tab-tools.test.ts  tool-fixture.ts  tools.test.ts
test/cli/: cli.test.ts
test/fixtures/: files.ts  server.ts
(+2 files in other folders)
